[package]
name = "pippiroh"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.12.0"
actix-rt = "2.11.0"
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive"] }
data-encoding = "2.9.0"
futures-lite = "2.6.1"
iroh = "0.93.2"
iroh-blobs = "0.95.0"
iroh-gossip = "0.93.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.48.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
